2006-06-27  Adam Jocksch  <ajocksch@redhat.com>

	* register/RegisterWindow.java (setTask): Now sets the title of the
	window to a format matching that of the source window.

	* glade/frysk_source.glade: Increased the size of the variable trace
	pane.

2006-06-26  Phil Muldoon  <pmuldoon@redhat.com>

	* SessionManagerGui.java (getSessionManagementControls): Set doSort().
	* Gui.java (setupCoreLogging): Setup guiEventLogger. Remove debug output.
	
	* glade/frysk_session_manager.glade: Changed labels, button
	in conjuction with suggestions.
	* glade/procpop.glade: Removed DEMO from custom observers
	menu item.

	* Gui.java (setupCoreLogging): Added. Setup core logging nicely.
	(gui): Remove old force Level.FINE core logging.

2006-06-26  Adam Jocksch  <ajocksch@redhat.com>

	* glade/registerwindow.glade: Set the border width on the main
	register window to 12 and set the minimum height and widgth on the
	register and register format dialogs.

2006-06-26  Phil Muldoon  <pmuldoon@redhat.com>

	* Gui.java (gui): Added core logger thump (commented out)

2006-06-26  Rick Moseley  <rmoseley@redhat.com>

	* test/dogtail_scripts/FryskHandler.py:  Fix typo.

2006-06-24  Phil Muldoon  <pmuldoon@redhat.com>

	* Gui.java (Gui): Added log event before frysk core
	window is populated. Cleaned up code. Indented.

2006-06-24  Sami Wagiaalla  <swagiaal@redhat.com>

	* Gui.java (menuItemEvent): put back old dummy consol window, had
	commented it out by mistake.

2006-06-23  Ivan Pantuyev  <ipantuye@redhat.com>
	
	* Gui.java: Added a vte window to the taskbar right-click menu.

2006-06-23  Phil Muldoon  <pmuldoon@redhat.com>

	* druid/frysk_create_session_druid.java: Add prompting tips.

2006-06-23  Adam Jocksch  <ajocksch@redhat.com>

	* glade/frysk_source.glade: Set main window visiblity to false to fix
	bug #2837.

2006-06-23  Nurdin Premji  <npremji@redhat.com>

	* test/GuiTestLib.java: Fixed a renaming OffspringObserver to